--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="right-nav">
                 <div class="location">
                     <div><img src="/imgs/callpng.png" alt=""> (32) 99981-0414</div>
-                    <div><img src="/imgs/location.jpg" alt=""> Rua Aprigio carrara, São Joaão del Rei</div>
+                    <div><img src="/imgs/location.jpg" alt=""> Rua Aprigio carrara, São João del Rei</div>
                     <div> <a href="login.html"><img src="/imgs/loginphoro.png" alt=""><span id="username"> Login/Signup</span></a></div>
                 </div>
                 <div class="search-basket">
@@ -59,8 +59,7 @@
                 <li>Cleaning & Household</li>
                 <li>Kitchen, Garden & Pets</li>
                 <li>Eggs, Meat & Fish</li>
-                <li>Gourmet & World Food</li>
-            </ul>a
+            </ul>
         </div>
         <div id="offers">
             <img src="./imgs/offertag.png" alt="">
@@ -127,14 +126,10 @@
 
     <!-- <------------------------------------------------Offer button start ------------------------------------------------>
     <div id="offer_btn">
-        <div>EGGS,MEAT AND FISH</div>
+        <div>Ovos e Carnes</div>
         <div><img
                 src="https://www.bigbasket.com/media/uploads/banner_images/t1_hp_cmc_neu-pass_topstrip_m_250622_02.png"
                 alt=""></div>
-        <div>AYURVEDA</div>
-        <div>BUY MORE SAVE MORE</div>
-        <div>DEALS OF THE WEEK</div>
-        <div>COMBO STORE</div>
     </div>
     <!-- <------------------------------------------------Offer button end ------------------------------------------------>
 
@@ -150,30 +145,10 @@
 
     <!-- <------------------------------------------------My smart basket end  ------------------------------------------------>
 
-    <!-- <------------------------------------------------Bank offer start  ------------------------------------------------>
-
-    <h3>Bank Offers</h3>
-    <hr>
-    <div id="bank_offer">
-        <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/10f5d77b-78a4-4443-b714-735d404396b8/hp-bank-offer-July_Affiliates_paytm-wallet_480x360-110722.jpg"
-                alt=""></div>
-        <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/10f5d77b-78a4-4443-b714-735d404396b8/t1_hp_aff_m_sbi_360_060722.jpg"
-                alt=""></div>
-        <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/10f5d77b-78a4-4443-b714-735d404396b8/t1_hp_aff_m_rbl_360_110722.jpg"
-                alt=""></div>
-        <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/10f5d77b-78a4-4443-b714-735d404396b8/t1_hp_m_aff_dbs_360_070722.jpg"
-                alt=""></div>
-
-    </div>
-    <!-- <------------------------------------------------Bank offer start  ------------------------------------------------>
 
     <!-- <------------------------------------------------Top offer start  ------------------------------------------------>
 
-    <h3>Top Offers</h3>
+    <h3>Ofertas</h3>
     <hr>
     <div id="top_offer">
         <div><img
@@ -185,16 +160,13 @@
         <div><img
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/fc3636df-0979-42fe-aa4b-8b55eb0cd3e5/t1_hp_cmc_combos_topoffersStorefront_m_480_250622_03.jpg"
                 alt=""></div>
-        <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/10f5d77b-78a4-4443-b714-735d404396b8/t1_hp_m_aff_dbs_360_070722.jpg"
-                alt=""></div>
 
     </div>
     <!-- <------------------------------------------------Top offer end  ------------------------------------------------>
 
     <!-- <------------------------------------------------Fruits and vegitables start  ------------------------------------------------>
 
-    <h3>Fruits & Vegetables</h3>
+    <h3>Frutas e Vegetais</h3>
     <hr>
     <div id="fruits">
         <div id="fruits_left">
@@ -220,7 +192,7 @@
     <!-- <------------------------------------------------Fruits and vegitables end  ------------------------------------------------>
     <!-- <------------------------------------------------Your Daily Staples start  ------------------------------------------------>
 
-    <h3>Your Daily Staples</h3>
+    <h3>Cesta Básica</h3>
     <hr>
     <div id="stapels">
         <div><img
@@ -245,7 +217,7 @@
 
     <!-- <------------------------------------------------Beverages Staples start  ------------------------------------------------>
 
-    <h3>Beverages</h3>
+    <h3>Bebidas</h3>
     <hr>
     <div id="fruits">
         <div id="fruits_left">
@@ -270,7 +242,7 @@
     </div>
 
     <!-- <------------------------------------------------Snack Store start  ------------------------------------------------>
-    <h3>Snack Store</h3>
+    <h3>Snacks</h3>
     <hr>
     <div id="stapels">
         <div><img
@@ -288,7 +260,7 @@
     </div>
     <!-- <------------------------------------------------Cleaning & Household  ------------------------------------------------>
 
-    <h3>Cleaning & Household</h3>
+    <h3>Limpeza</h3>
     <hr>
     <div id="stapels">
         <div><img
@@ -307,7 +279,7 @@
 
     <!-- <------------------------------------------------Beauty & Hygiene  ------------------------------------------------>
 
-    <h3>Beauty & Hygiene</h3>
+    <h3>Beleza e Higiene</h3>
     <hr>
     <div id="fruits">
         <div id="fruits_left">
@@ -333,7 +305,7 @@
     </div>
     <!-- <------------------------------------------------Home & Kitchen Essentials  ------------------------------------------------>
 
-    <h3>Home & Kitchen Essentials</h3>
+    <h3>Casa e Cozinha</h3>
     <hr>
     <div id="stapels">
         <div><img
@@ -391,7 +363,7 @@
     <!-- <------------------------------------------------ Image slider end ------------------------------------------------>
 
     <!-- <------------------------------------------------Brand Store  ------------------------------------------------>
-    <h3>Brand Store</h3>
+    <h3>Aqui você encontra:</h3>
     <hr>
     <div id="stapels">
         <div><img
@@ -414,7 +386,9 @@
                 alt=""></div>
     </div>
 
-    <div id="read_more">
+   
+   
+<!-- <div id="read_more"> 
         <h4>bigbasket – online grocery store</h4>
         <p> Did you ever imagine that the freshest of fruits and vegetables, top quality pulses and food grains, dairy
             products and hundreds of branded items could be handpicked and delivered to your home, all at the click of a
@@ -475,41 +449,24 @@
             </span>
             <button id="next" onclick="moreRead()">Read More</button>
     </div>
+    -->
     <!-- ---------------------------------------------------------Footer ---------------------- -->
     <div class="footer">
         <div id="footer-bigbasket">
             <li>bigbasket</li>
             <li>About us</li>
             <li>In News</li>
-            <li>Green bigbasket</li>
             <li>Privacy Policy</li>
-            <li>Affiliate</li>
             <li>Terms and Conditions</li>
-            <li>Careers At bigbasket</li>
-            <li>bb Instant</li>
-            <li>bb Daily</li>
-            <li>bb Blog</li>
+            <li>Trabalhe conosco</li>
+
         </div>
         <div id="footer-help">
             <li>Help</li>
             <li>FAQs</li>
             <li>Contact Us</li>
-            <li>bb Wallet FAQs</li>
-            <li>bb Wallet T&Cs</li>
             <li>Vendor Connect</li>
             <li>E-Invoice Compliance for bigbasket Vendors</li>
-        </div>
-        <div id="footer-download-app">
-            <li>Download Our App</li>
-            <img id="download-img" src="https://www.bbassets.com/static/v2498/custPage/build/content/img/Google-App-store-icon.png" alt="">
-            <img id="download-img" src="https://www.bbassets.com/static/v2498/custPage/build/content/img/Apple-App-store-icon.png" alt="">
-        </div>
-        <div id="footer-contact">
-            <li>Get Social With Us</li>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-pinterest"></i>
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-instagram-square"></i>
         </div>
     </div>
 
