--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="search-basket">
                     <div class="search">
-                        <input type="text" placeholder="Search for products...">
+                        <input type="text" placeholder="Procure por um produto...">
                         <img src="./imgs/searchbtn.png" alt="">
                     </div>
                     <div class="basket"><a href="cart.html">
