--- a/beverages.html
+++ b/beverages.html
@@ -24,19 +24,21 @@
                 </div>
                 <div id="right-nav">
                     <div class="location">
-                        <div><img src="/imgs/callpng.png" alt=""> 1860 123 1000</div>
-                        <div><img src="/imgs/location.jpg" alt=""> Satana,Nashik,MH.IND</div>
-                        <div> <a href="login.html"><img src="/imgs/loginphoro.png" alt=""> Login/Signup</a></div>
+                        <div><img src="/imgs/callpng.png" alt=""> (32) 99981-0414</div>
+                        <div><img src="/imgs/location.jpg" alt=""> Rua Aprigio carrara, São João del Rei</div>
+                        <div> <a href="login.html"><img src="/imgs/loginphoro.png" alt=""><span id="username"> Login/Signup</span></a></div>
                     </div>
                     <div class="search-basket">
                         <div class="search">
-                            <input type="text" placeholder="Search for products...">
-                            <img src="./imgs/searchbtn.png" alt="" id="">
+                            <input type="text" placeholder="Procure por um produto...">
+                            <img src="./imgs/searchbtn.png" alt="">
                         </div>
-                        <div class="basket">
-                            <img src="https://bigbasketcloneproject.netlify.app/basket.png" alt="">
-                            <span id="basket-items">My Basket <br>
-                                <p> <span id="total_item"></span> Items.</p></span>
+                        <div class="basket"><a href="cart.html">
+                            <img src="https://bigbasketcloneproject.netlify.app/basket.png" alt=""></a>
+                            <span id="basket-items">Meu carrinho <br>
+    
+                                <p> <span id="total_item"></span> Itens.</p></span>
+                            
                         </div>
                     </div>
                 </div>
