--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Home Page</title>
+    <title>Mercearia Carrara</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;600&display=swap');
     </style>
@@ -20,26 +20,20 @@
         <div id="nav">
             <div id="left-nav">
                 <a href="index.html">
-                    <img src="Big-basket.png" alt="logo">
+                    <img src="/imgs/logo2.png" alt="logo">
                 </a>
             </div>
             <div id="right-nav">
                 <div class="location">
                     <div><img src="/imgs/callpng.png" alt=""> (32) 99981-0414</div>
-                    <div><img src="/imgs/location.jpg" alt=""> Rua Aprigio carrara, São João del Rei</div>
-                    <div> <a href="login.html"><img src="/imgs/loginphoro.png" alt=""><span id="username"> Login/Signup</span></a></div>
+                    <div><img src="/imgs/location.jpg" alt=""> Rua Aprigio carrara 350, São João del Rei</div>
+
                 </div>
                 <div class="search-basket">
                     <div class="search">
                         <input type="text" placeholder="Procure por um produto...">
                         <img src="./imgs/searchbtn.png" alt="">
                     </div>
-                    <div class="basket"><a href="cart.html">
-                        <img src="https://bigbasketcloneproject.netlify.app/basket.png" alt=""></a>
-                        <span id="basket-items">Meu carrinho <br>
-
-                            <p> <span id="total_item"></span> Itens.</p></span>
-                        
                     </div>
                 </div>
             </div>
@@ -47,112 +41,27 @@
     </div>
     <!-- <------------------------------------------------Nav Bar end ------------------------------------------------>
 
-
-    <div class="second">
-        <div id="category">
-            <ul>Categorias <img src="./imgs/dropdown.jpg" alt="">
-                <li><a href="vegitable.html">Vegetais</a></li>
-                <li>Foodgrains, Oil & Masala</li>
-                <li><a href="beverages.html"> Beverages</a></li>
-                <li>Snacks & Branded Foods</li>
-                <li>Beauty & Hygiene</li>
-                <li>Cleaning & Household</li>
-                <li>Kitchen, Garden & Pets</li>
-                <li>Eggs, Meat & Fish</li>
-            </ul>
-        </div>
-        <div id="offers">
-            <img src="./imgs/offertag.png" alt="">
-            Offers
-        </div>
-    </div>
-
+<br>
     <!-- <------------------------------------------------Image Carousel start ------------------------------------------------>
 
-    <div id="carousel">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">Offer on Stapels</li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1">Fresho Meat</li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2">Fresho Days</li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3">Snacking Store</li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="4">Happy Chef</li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="5">Panner Store</li>
-
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="imageReposicao">
                     <img class="d-block w-100"
-                        src="https://www.bigbasket.com/media/uploads/banner_images/all_hp_m_bcd_paneer_1600x460_250622.jpg"
+                        src="imgs\Reposição de pães carrousel img.png"
                         alt="First slide">
                 </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100"
-                        src="https://www.bigbasket.com/media/uploads/banner_images/hp_fom_m_bbpl-staples_460_180722_Bangalore.jpg"
-                        alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100"
-                        src="https://www.bigbasket.com/media/uploads/banner_images/hp_m_Dry_FishBanner_1600x460_200722.jpg"
-                        alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100"
-                        src="https://www.bigbasket.com/media/uploads/banner_images/fresho_days_fnv_Bangalore-1600x460_19thJULY22.jpeg"
-                        alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100"
-                        src="https://www.bigbasket.com/media/uploads/banner_images/t1_hp_sbf_m_snacking-store_1600x460_250622.jpg"
-                        , alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100"
-                        src="https://www.bigbasket.com/media/uploads/banner_images/all_hp_m_cmc_happychef_1600x460_250622.jpg"
-                        , alt="Third slide">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
+       
     <!-- <------------------------------------------------Image Carousel ens ------------------------------------------------>
 
-    <!-- <------------------------------------------------Offer button start ------------------------------------------------>
-    <div id="offer_btn">
-        <div>Ovos e Carnes</div>
-        <div><img
-                src="https://www.bigbasket.com/media/uploads/banner_images/t1_hp_cmc_neu-pass_topstrip_m_250622_02.png"
-                alt=""></div>
-    </div>
-    <!-- <------------------------------------------------Offer button end ------------------------------------------------>
 
-    <!-- <------------------------------------------------My smart basket start ------------------------------------------------>
-    <div id="carousel_veg">
-        <div class="slide">
-            <!-- ----------------------Append div here--------------------- -->
-            <button class="slide_btn_left"><</button>
-            <button class="slide_btn_right">></button>
-        </div>
-
-    </div>
-
-    <!-- <------------------------------------------------My smart basket end  ------------------------------------------------>
 
 
     <!-- <------------------------------------------------Top offer start  ------------------------------------------------>
 
-    <h3>Ofertas</h3>
+    <h3>Formas de <b>Contato</b> </h3>
     <hr>
     <div id="top_offer">
         <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/fc3636df-0979-42fe-aa4b-8b55eb0cd3e5/t1_hp_cmc_deals-of-the-week_topoffersStorefront_m_480_250622_01.jpg"
+                src="imgs/whatsapp 480x360.png"
                 alt=""></div>
         <div><img
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/fc3636df-0979-42fe-aa4b-8b55eb0cd3e5/t1_hp_cmc_big-pack_topoffersStorefront_m_480_250622_02.jpg"
@@ -367,7 +276,7 @@
     <hr>
     <div id="stapels">
         <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/703021c6-3c40-45a6-a6f4-4501bc78392e/t1_hp_cmc_amul_brandStorefront_m_480_250622_01.jpg"
+                src="imgs/Logo_Ambev.png"
                 alt=""></div>
         <div><img
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/703021c6-3c40-45a6-a6f4-4501bc78392e/t1_hp_cmc_dettol_brandStorefront_m_480_250622_02.jpg"
@@ -506,6 +415,13 @@
             <div class="pay">
                <p> CASH ON DELIVERY</p> 
                 <div>
+                    <!--
+    Visa;
+    Mastercard;
+    Hipercard;
+    American Express (Amex);
+    Elo.
+-->
                     <img src="https://www.bbassets.com/static/v2498/custPage/build/content/img/footersprite.png" alt="">
                 </div>
             </div>
