--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <hr>
     <div id="top_offer">
         <div><img
+                href="https://api.whatsapp.com/send/?phone=5532999810414&text&type=phone_number&app_absent=0"
                 src="imgs/whatsapp 480x360.png"
                 alt=""></div>
         <div><img
