update: agora o zap funciona

--- a/index.html
+++ b/index.html
@@ -59,9 +59,16 @@
 
     <h3>Formas de <b>Contato</b> </h3>
     <hr>
+
+<script>
+        function redirecionar(){
+            window.location.href = "https://api.whatsapp.com/send/?phone=5532999810414&text&type=phone_number&app_absent=0";
+        }
+</script>
+
     <div id="top_offer">
         <div><img
-                href="https://api.whatsapp.com/send/?phone=5532999810414&text&type=phone_number&app_absent=0"
+                onclick=" redirecionar() "
                 src="imgs/whatsapp 480x360.png"
                 alt=""></div>
         <div><img
