--- a/rota.html
+++ b/rota.html
@@ -4,35 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rota</title>
-
+    <link rel="stylesheet" href="index.css">
     
 
     <style>
 
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;600&display=swap');
 
-
-
-    *{
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-
-
-    }
-
-
-
-
-
-
-
-
     </style>
 
 </head>
 <body>
     
+
+    <div class="nav-outer">
+        <div id="nav">
+            <div id="left-nav">
+                <a href="index.html">
+                    <img src="/imgs/logo2.png" alt="logo">
+                </a>
+            </div>
+            <div id="right-nav">
+                <div class="location">
+                    <div><img src="/imgs/callpng.png" alt=""> (32) 99981-0414</div>
+                    <div><img src="/imgs/location.jpg" alt=""> Rua Aprigio carrara 350, São João del Rei</div>
+
+                </div>
+                <div class="search-basket">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=15zejA7u3NtNAUXVUFOphEpSKqgiSjKY&ehbc=2E312F" width="640" height="480"></iframe>
