--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- <------------------------------------------------Top offer start  ------------------------------------------------>
 
-    <h3>Formas de <b>Contato</b> </h3>
+    <h3><b>Formas de Contato</b> </h3>
     <hr>
 
 <script>
