--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
     <div id="stapels">
         <div><img
                 src="imgs/Logo_Ambev.png"
-                alt=""></div>
+                alt="ambev"></div>
         <div><img
-                src="   "
-                alt="  "></div>
+                src="  "
+                alt=" sadia "></div>
         <div><img
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/703021c6-3c40-45a6-a6f4-4501bc78392e/t1_hp_cmc_cocacola_brandStorefront_m_480_250622_03.jpg"
                 alt=""></div>
@@ -296,8 +296,8 @@
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/703021c6-3c40-45a6-a6f4-4501bc78392e/t1_hp_cmc_loreal_brandStorefront_m_480_250622_04.jpg"
                 alt=""></div>
         <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/703021c6-3c40-45a6-a6f4-4501bc78392e/t1_hp_cmc_indai-gate_brandStorefront_m_480_250622_05.jpg"
-                alt=""></div>
+                src="   "
+                alt="outro"></div>
         <div><img
                 src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/703021c6-3c40-45a6-a6f4-4501bc78392e/t1_hp_cmc_durex_brandStorefront_m_480_250622_06.jpg"
                 alt=""></div>
