--- a/rota.html
+++ b/rota.html
@@ -12,6 +12,10 @@
 
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;600&display=swap');
 
+
+    #textRota{
+      background-color: #84c225;
+    }
     </style>
 
 </head>
@@ -48,7 +52,7 @@
       
     <br>
       <blockquote class="blockquote text-center">
-        <p>Veja como chegar na Mercearia Carrara:</p>
+        <p id="textRota">Veja como chegar na Mercearia Carrara:</p>
       </blockquote>
 
 
