--- a/rota.html
+++ b/rota.html
@@ -60,30 +60,18 @@
     <iframe src="https://www.google.com/maps/d/u/0/embed?mid=15zejA7u3NtNAUXVUFOphEpSKqgiSjKY&ehbc=2E312F" width="100%" height="480"></iframe>
 </div>
 
-<div class="footer">
-  <div id="footer-bigbasket">
+<div class="retanglegreen">
+  <noscript></noscript>
+</div>
+
+
+  <div class="footer">
+  <div id="footer">
+
       <li>Mercearia Carrara</li>
       <li>Sobre nós</li>
       <li>Trabalhe conosco</li>
 
-  </div>
-</div>
-
-<div class="footer-end">
-  <div>
-      <div class="ft-div"> 
-
-      <div class="ft-div">
-          <h1>PAYMENT OPTIONS:</h1>
-      </div>
-      <div class="pay">
-         <p> Pagamento em dinheiro</p> 
-         <p> Pagamento com Pix</p> 
-          <div>
-              <img src="/imgs/paymentmethod.png" alt="">
-          </div>
-      </div>
-  </div>
 </div>
 </div>
 
