--- a/index.html
+++ b/index.html
@@ -66,21 +66,25 @@
     <hr>
 
 <script>
-        function redirecionar(){
+        function redirecionarzap(){
             window.location.href = "https://api.whatsapp.com/send/?phone=5532999810414&text&type=phone_number&app_absent=0";
+        }
+</script>
+
+<script>
+        function redirecionarloc(){
+            window.location.href = "rota.html";
         }
 </script>
 
     <div id="top_offer">
         <div><img
-                onclick=" redirecionar() "
+                onclick=" redirecionarzap() "
                 src="imgs/whatsapp 480x360.png"
                 alt=""></div>
         <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/fc3636df-0979-42fe-aa4b-8b55eb0cd3e5/t1_hp_cmc_big-pack_topoffersStorefront_m_480_250622_02.jpg"
-                alt=""></div>
-        <div><img
-                src="https://www.bigbasket.com/media/customPage/77880b23-0233-4fad-b54a-a93c998e0d20/86fb097c-05bf-4d6d-abab-5afc563b9c0e/fc3636df-0979-42fe-aa4b-8b55eb0cd3e5/t1_hp_cmc_combos_topoffersStorefront_m_480_250622_03.jpg"
+                onclick="redirecionarloc()"
+                src="locationImg.png"
                 alt=""></div>
 
     </div>
