--- a/rota.html
+++ b/rota.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-          <img src="imgs\logo2be.png" alt="Bootstrap" width="100" height="100">
+          <img src="imgs\logo2be.png" alt="Bootstrap" width="100" height="100" href="index.html">
           </a>
           <div id="right-nav">
             <div class="location">
