--- a/index.html
+++ b/index.html
@@ -33,11 +33,25 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Contato</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Produtos
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Frutas e Vegetais</a></li>
+                          <li><a class="dropdown-item" href="#">Cesta Básica</a></li>
+                          <li><a class="dropdown-item" href="#">Bebidas</a></li>
+                          <li><a class="dropdown-item" href="#">Snacks</a></li>
+                          <li><a class="dropdown-item" href="#">Limpeza</a></li>
+                          <li><a class="dropdown-item" href="#">Beleza e Higiene</a></li>
+                          <li><a class="dropdown-item" href="#">Casa e Cozinha</a></li>     
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Pães de Sal</a></li>
+                        </ul>
                       </li>
+              
                     </ul>
                   </div>
                 </div>
@@ -55,9 +69,6 @@
                 </div>
        
     <!-- <------------------------------------------------Image Carousel ens ------------------------------------------------>
-
-
-
 
     <!-- <------------------------------------------------Top offer start  ------------------------------------------------>
 
