--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
                 alt=""></div>
 
     </div>
+
+
+
+    <h3><b>PIX</b> </h3>
+    <hr>
+    
+
+    
+    <div id="pix">
+        <div>
+                <img
+                onclick=" "
+                src="imgs/whatsapp 480x360.png"
+                alt=""></div>
+        </div>
+
     <!-- <------------------------------------------------Top offer end  ------------------------------------------------>
 
     <!-- <------------------------------------------------Fruits and vegitables start  ------------------------------------------------>
