--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div>
                 <img
                 onclick=" "
-                src="imgs/whatsapp 480x360.png"
+                src="imgs/logopix.png"
                 alt=""></div>
         </div>
 
