--- a/rota.html
+++ b/rota.html
@@ -13,7 +13,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;500;600&display=swap');
 
 
-    #textRota{
+    #textRota,#voltar {
       background-color: #84c225;
     }
     </style>
@@ -36,10 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Contato</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Voltar</a>
+            <a id="voltar" class="nav-link active" aria-current="page" href="index.html">Voltar</a>
           </li>
   
         </ul>
