--- a/rota.html
+++ b/rota.html
@@ -25,7 +25,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
       <img src="imgs\logo2be.png" alt="Bootstrap" width="100" height="100" href="index.html">
       </a>
       <div id="right-nav">
